; ModuleID = '/home/carl/AnghaBench/freebsd/usr.bin/elfdump/extr_elfdump.c_e_machines.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.bin/elfdump/extr_elfdump.c_e_machines.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@e_machines.machdesc = internal global [64 x i8] zeroinitializer, align 16
@.str = private unnamed_addr constant [8 x i8] c"EM_NONE\00", align 1
@.str.1 = private unnamed_addr constant [7 x i8] c"EM_M32\00", align 1
@.str.2 = private unnamed_addr constant [9 x i8] c"EM_SPARC\00", align 1
@.str.3 = private unnamed_addr constant [7 x i8] c"EM_386\00", align 1
@.str.4 = private unnamed_addr constant [7 x i8] c"EM_68K\00", align 1
@.str.5 = private unnamed_addr constant [7 x i8] c"EM_88K\00", align 1
@.str.6 = private unnamed_addr constant [9 x i8] c"EM_IAMCU\00", align 1
@.str.7 = private unnamed_addr constant [7 x i8] c"EM_860\00", align 1
@.str.8 = private unnamed_addr constant [8 x i8] c"EM_MIPS\00", align 1
@.str.9 = private unnamed_addr constant [7 x i8] c"EM_PPC\00", align 1
@.str.10 = private unnamed_addr constant [9 x i8] c"EM_PPC64\00", align 1
@.str.11 = private unnamed_addr constant [7 x i8] c"EM_ARM\00", align 1
@.str.12 = private unnamed_addr constant [18 x i8] c"EM_ALPHA (legacy)\00", align 1
@.str.13 = private unnamed_addr constant [11 x i8] c"EM_SPARCV9\00", align 1
@.str.14 = private unnamed_addr constant [9 x i8] c"EM_IA_64\00", align 1
@.str.15 = private unnamed_addr constant [10 x i8] c"EM_X86_64\00", align 1
@.str.16 = private unnamed_addr constant [11 x i8] c"EM_AARCH64\00", align 1
@.str.17 = private unnamed_addr constant [9 x i8] c"EM_RISCV\00", align 1
@.str.18 = private unnamed_addr constant [31 x i8] c"(unknown machine) -- type 0x%x\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32)* @e_machines to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @e_machines(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %23 [
    i32 134, label %5
    i32 136, label %6
    i32 130, label %7
    i32 145, label %8
    i32 144, label %9
    i32 142, label %10
    i32 138, label %11
    i32 143, label %12
    i32 135, label %13
    i32 133, label %14
    i32 132, label %15
    i32 139, label %16
    i32 140, label %17
    i32 129, label %18
    i32 137, label %19
    i32 128, label %20
    i32 141, label %21
    i32 131, label %22
  ]

5:                                                ; preds = %1
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i8** %2, align 8
  br label %26

6:                                                ; preds = %1
  store i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0), i8** %2, align 8
  br label %26

7:                                                ; preds = %1
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.2, i64 0, i64 0), i8** %2, align 8
  br label %26

8:                                                ; preds = %1
  store i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.3, i64 0, i64 0), i8** %2, align 8
  br label %26

9:                                                ; preds = %1
  store i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.4, i64 0, i64 0), i8** %2, align 8
  br label %26

10:                                               ; preds = %1
  store i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.5, i64 0, i64 0), i8** %2, align 8
  br label %26

11:                                               ; preds = %1
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.6, i64 0, i64 0), i8** %2, align 8
  br label %26

12:                                               ; preds = %1
  store i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.7, i64 0, i64 0), i8** %2, align 8
  br label %26

13:                                               ; preds = %1
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.8, i64 0, i64 0), i8** %2, align 8
  br label %26

14:                                               ; preds = %1
  store i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.9, i64 0, i64 0), i8** %2, align 8
  br label %26

15:                                               ; preds = %1
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.10, i64 0, i64 0), i8** %2, align 8
  br label %26

16:                                               ; preds = %1
  store i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.11, i64 0, i64 0), i8** %2, align 8
  br label %26

17:                                               ; preds = %1
  store i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.12, i64 0, i64 0), i8** %2, align 8
  br label %26

18:                                               ; preds = %1
  store i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.13, i64 0, i64 0), i8** %2, align 8
  br label %26

19:                                               ; preds = %1
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.14, i64 0, i64 0), i8** %2, align 8
  br label %26

20:                                               ; preds = %1
  store i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.15, i64 0, i64 0), i8** %2, align 8
  br label %26

21:                                               ; preds = %1
  store i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.16, i64 0, i64 0), i8** %2, align 8
  br label %26

22:                                               ; preds = %1
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.17, i64 0, i64 0), i8** %2, align 8
  br label %26

23:                                               ; preds = %1
  %24 = load i32, i32* %3, align 4
  %25 = call i32 @snprintf(i8* getelementptr inbounds ([64 x i8], [64 x i8]* @e_machines.machdesc, i64 0, i64 0), i32 64, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.18, i64 0, i64 0), i32 %24)
  store i8* getelementptr inbounds ([64 x i8], [64 x i8]* @e_machines.machdesc, i64 0, i64 0), i8** %2, align 8
  br label %26

26:                                               ; preds = %23, %22, %21, %20, %19, %18, %17, %16, %15, %14, %13, %12, %11, %10, %9, %8, %7, %6, %5
  %27 = load i8*, i8** %2, align 8
  ret i8* %27
}

declare dso_local i32 @snprintf(i8*, i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
